--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
         "babel-loader": "^7.1.4",
         "babel-preset-env": "^1.7.0",
         "clean-webpack-plugin": "^0.1.19",
-        "css-loader": "^0.28.11",
-        "cssnano": "^3.10.0",
-        "favicons-webpack-plugin": "0.0.9",
+        "copy-webpack-plugin": "^5.0.3",
+        "css-loader": "^3.1.0",
+        "cssnano": "^4.1.10",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.1.0",
         "http-server": "^0.11.1",
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.12.0",
-        "optimize-css-assets-webpack-plugin": "^4.0.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
         "postcss-loader": "^2.1.3",
         "sass-loader": "^6.0.7",
         "source-map-loader": "^0.2.3",
