--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^5.3.3"
   },
   "dependencies": {
+    "@versatiles/style": "^5.7.0",
     "maplibre-gl": "^4.5.0",
     "normalize.css": "^8.0.1"
   }
